Modularize: moved base mvc controllers to 'SmartStore.Web.Framework'

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -183,6 +183,8 @@
     <Compile Include="Controllers\CustomerLastActivityAttribute.cs" />
     <Compile Include="Controllers\ParameterBasedOnFormNameAndValueAttribute.cs" />
     <Compile Include="Controllers\ParameterBasedOnFormNameAttribute.cs" />
+    <Compile Include="Controllers\SmartAsyncController.cs" />
+    <Compile Include="Controllers\SmartController.cs" />
     <Compile Include="Controllers\StoreIpAddressAttribute.cs" />
     <Compile Include="Controllers\UnitOfWorkAttribute.cs" />
     <Compile Include="Events\AdminTabStripCreated.cs" />
