--- a/src/Presentation/SmartStore.Web/Administration/Views/Web.config
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Web.config
@@ -41,6 +41,7 @@
         <add namespace="SmartStore.Admin.Models.Settings" />
         <add namespace="SmartStore.Admin.Models.Shipping" />
         <add namespace="SmartStore.Admin.Models.ShoppingCart" />
+				<add namespace="SmartStore.Admin.Models.Stores" />
         <add namespace="SmartStore.Admin.Models.Tasks" />
         <add namespace="SmartStore.Admin.Models.Tax" />
         <add namespace="SmartStore.Admin.Models.Topics" />
