--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Domain\Common\BankConnectionSettings.cs" />
     <Compile Include="Domain\Common\SocialSettings.cs" />
     <Compile Include="Domain\Directory\DeliveryTime.cs" />
+    <Compile Include="Domain\Stores\Store.cs" />
     <Compile Include="Domain\Themes\ThemeSettings.cs" />
     <Compile Include="Domain\Themes\ThemeVariable.cs" />
     <Compile Include="Extensions\HttpExtensions.cs" />
