Added "HOST values" field to a store entity for a comma separated list of possible HTTP_POST values (for example, "yourstore.com,www.yourstore.com"). Required if you have run a multi-store solution to determine the current store.

--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="ComponentModel\ExpandoTests.cs" />
     <Compile Include="Domain\Shipping\ShippingOptionListTypeConverterTests.cs" />
+    <Compile Include="Domain\Stores\StoreExtensionsTests.cs" />
     <Compile Include="Infrastructure\DependencyManagement\AutofacTests.cs" />
     <Compile Include="CommonHelperTests.cs" />
     <Compile Include="WebHelperTests.cs" />
