--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Domain\Directory\DeliveryTime.cs" />
     <Compile Include="Domain\Stores\IStoreMappingSupported.cs" />
     <Compile Include="Domain\Stores\Store.cs" />
+    <Compile Include="Domain\Stores\StoreExtensions.cs" />
     <Compile Include="Domain\Stores\StoreMapping.cs" />
     <Compile Include="Domain\Themes\ThemeSettings.cs" />
     <Compile Include="Domain\Themes\ThemeVariable.cs" />
