Added store mapping support for topics

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Models\Tasks\ScheduleTaskModel.cs" />
     <Compile Include="Models\Themes\ConfigureThemeModel.cs" />
     <Compile Include="Models\Themes\ThemeManifestModel.cs" />
+    <Compile Include="Models\Topics\TopicListModel.cs" />
     <Compile Include="Models\Topics\TopicModel.cs" />
     <Compile Include="Models\Shipping\ShippingMethodRestrictionModel.cs" />
     <Compile Include="Models\News\NewsCommentModel.cs" />
