Created a new IStoreContext to determine the currect store. We cannot use such property in IWorkContext because it could cause circular references in the next changeset

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Extensions\HttpExtensions.cs" />
     <Compile Include="Extensions\XmlWriterExtensions.cs" />
     <Compile Include="IO\MimeTypes.cs" />
+    <Compile Include="IStoreContext.cs" />
     <Compile Include="Linq\Expanders\IPathExpander.cs" />
     <Compile Include="Linq\Expanders\LambdaPathExpander.cs" />
     <Compile Include="Linq\Expanders\StringPathExpander.cs" />
