Allow a store owner to edit a store on the "All settings (advanced)" page

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -1149,6 +1149,9 @@
   <ItemGroup>
     <Content Include="Views\Store\_CreateOrUpdate.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Setting\EditorTemplates\Store.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
