Allow a store owner to have different prices in different stores. He can do it by configure tier prices limited to a specific store (just set tier price quantity to 1).

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -1156,6 +1156,9 @@
   <ItemGroup>
     <Content Include="Views\Setting\StoreScopeConfiguration.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ProductVariant\EditorTemplates\TierPriceStore.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
