Resolve issue #11 - Made slide behaviour for content slider background configurable

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/theme.config
@@ -129,6 +129,7 @@
 
     <!-- Slider -->
     <Var name="SliderUseRadialBg" type="Boolean">true</Var>
+    <Var name="SliderBgSlide" type="Select#BgSlideBehaviours">on</Var>
     <Var name="SliderBackgroundColor" type="Color">#2786ce</Var>
     <Var name="SliderTitleColor" type="Color">#fff</Var>
     <Var name="SliderTitleFontFamily" type="String">'Segoe UI Light', 'Segoe UI', Arial, sans-serif</Var>
@@ -186,6 +187,12 @@
       <Option>6/12/6</Option>
       <Option>7/12/5</Option>
       <Option>7/11/6</Option>
+    </Select>
+
+    <Select id="BgSlideBehaviours">
+      <Option>off</Option>
+      <Option>on</Option>
+      <Option>opposite</Option>
     </Select>
   </Selects>
     
