--- a/src/Libraries/SmartStore.Core/packages.config
+++ b/src/Libraries/SmartStore.Core/packages.config
@@ -7,5 +7,6 @@
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="System.Linq.Dynamic" version="1.0.0" targetFramework="net45" />
 </packages>
