Fix: renamed href attributes to data-href for all ajax-cart-links. The route 'AddProductVariantToCart > GET' does not exist.

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,8 @@ local.properties
 ###########
 
 *-sym.*
-*-symdir
+*-symdir/
+[Ee]xternal[Ff]iles/
 /src/Plugins/*-sym
 /src/Presentation/SmartStore.Web/Themes/*-sym
 
