Removed several redundant string resources from multi-store feature

--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -86,7 +86,7 @@
         <siteMapNode id="forum-settings" title="Forums settings" resKey="Admin.Configuration.Settings.Forums" controller="Setting" action="Forum" area="Admin" />
         <siteMapNode id="all-settings" title="All settings (settings)" resKey="Admin.Configuration.Settings.AllSettings" controller="Setting" action="AllSettings" area="Admin" />
       </siteMapNode>
-			<siteMapNode id="stores" title="Stores" resKey="Admin.Configuration.Stores" permissionNames="ManageStores" controller="Store" action="List" area="Admin" />
+			<siteMapNode id="stores" title="Stores" resKey="Admin.Common.Stores" permissionNames="ManageStores" controller="Store" action="List" area="Admin" />
       <siteMapNode id="countries" title="Countries" resKey="Admin.Configuration.Countries" permissionNames="ManageCountries" controller="Country" action="List" area="Admin" />
       <siteMapNode id="languages" title="Languages" resKey="Admin.Configuration.Languages" permissionNames="ManageLanguages" controller="Language" action="List" area="Admin" />
       <siteMapNode id="currencies" title="Currencies" resKey="Admin.Configuration.Currencies" permissionNames="ManageCurrencies" controller="Currency" action="List" area="Admin" />
