Updated facebook authentication plugin because it didn't work anymore

--- a/src/Plugins/ExternalAuth.Facebook/packages.config
+++ b/src/Plugins/ExternalAuth.Facebook/packages.config
@@ -2,33 +2,18 @@
 <packages>
   <package id="Autofac" version="3.0.2" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
-  <package id="DotNetOpenAuth" version="4.2.2.13055" targetFramework="net45" />
+  <package id="DotNetOpenAuth.AspNet" version="4.2.2.13055" targetFramework="net45" />
   <package id="DotNetOpenAuth.Core" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.Core.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.InfoCard" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.InfoCard.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth.Common" version="4.2.2.13055" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.2.2.13055" targetFramework="net45" />
   <package id="DotNetOpenAuth.OAuth.Core" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth.ServiceProvider" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.AuthorizationServer" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.Client" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.Client.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.ClientAuthorization" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.Core" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OAuth2.ResourceServer" version="4.2.2.13055" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenId.Core.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenId.Provider" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenId.Provider.UI" version="4.2.2.13055" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenIdInfoCard.UI" version="4.2.2.13055" targetFramework="net45" />
-  <package id="DotNetOpenAuth.OpenIdOAuth" version="4.2.2.13055" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
 </packages>
