--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -53,8 +53,7 @@
 
     <siteMapNode id="cms" title="Content&#160;Management" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates"
                  iconClass="sm-icon-folder" imageUrl="~/Administration/Content/images/ap-cms-white.png">
-      <siteMapNode id="content-slider" title="Content slider" resKey="Admin.ContentManagement.ContentSlider" permissionNames="ContentSlider" controller="ContentSlider"  action="Index" area="Admin" />
-      <siteMapNode id="polls" title="Polls" resKey="Admin.ContentManagement.Polls" permissionNames="ManagePolls" controller="Poll" action="List" area="Admin" />
+      <siteMapNode id="topics" title="Pages &amp; Topics" resKey="Admin.ContentManagement.Topics" permissionNames="ManageTopics" controller="Topic" action="List" area="Admin" />
       <siteMapNode id="news" title="News" resKey="Admin.ContentManagement.News" permissionNames="ManageNews" area="Admin" >
         <siteMapNode id="news-items" title="News items" resKey="Admin.ContentManagement.News.NewsItems" controller="News" action="List" area="Admin" />
         <siteMapNode id="news-comments" title="News comments" resKey="Admin.ContentManagement.News.Comments" controller="News" action="Comments" area="Admin" />
@@ -63,10 +62,11 @@
         <siteMapNode id="blog-posts" title="Blog posts" resKey="Admin.ContentManagement.Blog.BlogPosts" controller="Blog" action="List" area="Admin" />
         <siteMapNode id="blog-comments" title="Blog comments" resKey="Admin.ContentManagement.Blog.Comments" controller="Blog" action="Comments" area="Admin" />
       </siteMapNode>
-      <siteMapNode id="widgets" title="Widgets" resKey="Admin.ContentManagement.Widgets" permissionNames="ManageWidgets" controller="Widget" action="List" area="Admin" />
-      <siteMapNode id="topics" title="Topics" resKey="Admin.ContentManagement.Topics" permissionNames="ManageTopics" controller="Topic" action="List" area="Admin" />
+      <siteMapNode id="content-slider" title="Content slider" resKey="Admin.ContentManagement.ContentSlider" permissionNames="ContentSlider" controller="ContentSlider"  action="Index" area="Admin" />
       <siteMapNode id="forums" title="Manage forums" resKey="Admin.ContentManagement.Forums" permissionNames="ManageForums" controller="Forum" action="List" area="Admin" />
       <siteMapNode id="message-templates" title="Message templates" resKey="Admin.ContentManagement.MessageTemplates" permissionNames="ManageMessageTemplates" controller="MessageTemplate" action="List" area="Admin" />
+      <siteMapNode id="polls" title="Polls" resKey="Admin.ContentManagement.Polls" permissionNames="ManagePolls" controller="Poll" action="List" area="Admin" />
+      <siteMapNode id="widgets" title="Widgets" resKey="Admin.ContentManagement.Widgets" permissionNames="ManageWidgets" controller="Widget" action="List" area="Admin" />
     </siteMapNode>
 
     <siteMapNode id="configuration" title="Configuration" resKey="Admin.Configuration" permissionNames="ManageCountries,ManageLanguages,ManageSettings,ManagePaymentMethods,ManageExternalAuthenticationMethods,ManageTaxSettings,ManageShippingSettings,ManageCurrencies,ManageDeliveryTimes,ManageMeasures,ManageActivityLog,ManageACL,ManageSMSProviders,ManageEmailAccounts,ManageThemes,ManagePlugins"
