--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -430,6 +430,7 @@
     <Compile Include="Models\Checkout\CheckoutCompletedModel.cs" />
     <Compile Include="Models\Checkout\OnePageCheckoutModel.cs" />
     <Compile Include="Models\Checkout\UpdateSectionJsonModel.cs" />
+    <Compile Include="Models\Topics\TopicWidgetModel.cs" />
     <Compile Include="Models\Cms\RenderWidgetModel.cs" />
     <Compile Include="Models\Common\AddressModel.cs" />
     <Compile Include="Models\Common\FooterModel.cs" />
@@ -2279,6 +2280,7 @@
     <Content Include="Views\Catalog\ProductAskQuestion.cshtml" />
     <Content Include="Views\Catalog\ProductAskQuestionButton.cshtml" />
     <Content Include="Views\Catalog\ProductAskQuestionButton.Mobile.cshtml" />
+    <Content Include="Views\Topic\TopicWidget.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
